  - All style tasks now have a <xmlcalatog> element to locate the DTDs
    locally.
  - Fixed the clean-<api> target to point to the correct directories.
    This bug has been in XINS since version 0.170.

* Build and release process:
  - A symbolic link latest is created in the directory javadoc, j2h,
    checkstyle, javadoc-private and logdoc that points to the latest version.

* Logdoc:
  - Added the DTD for the logdoc xml files.
  - Added a target create-logdoc to create a basis log.xml with a
    translation-bundle.xml for a specified API.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.171:

* XINS/Java Common Library:
  - Added the string format for the javadoc for the type _date.

* Generated specification documentation:
  - If no pattern test is provided in the project, the default one on
    sourceforge.net is provided.
  - Generate the links to the version, the statistics and the settings for
    each environment.
  - Added an anchor to the input parameters, output parameters, elements
    and attributes.

* Build and release process:
  - Updated some javadoc to remove the warning due to links not found.
  - The previous version.prev.minor property in .version.property is
    incremented just before making the release.
  - Included the third party licenses in the release.
  - Removed the upload of the xins jar files to sourceforge.
  - Removed some unused libraries files from the release as well as the
    associated files.
  - Removed the empty directories in the release.

* Added the description of the stylesheets in the header.

* Removed escapepattern.xslt replaced with xml_to_java.xslt and
  package_to_dir.xslt replaced with a translate() call.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.170:

* XINS/Java Server Framework:
  - Renamed some variable in the generated classes to avoid conflict with
    parameter names.